# docs/swagger.json
@@ -181,6 +181,37 @@
                 "responses": {}
             }
         },
+        "/company/order/{order_id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get company order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Company",
+                    "Orders"
+                ],
+                "summary": "Get company order",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "order id",
+                        "name": "order_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/company/review/{review_id}": {
             "get": {
                 "description": "Get company review",
@@ -552,6 +583,37 @@
                 "responses": {}
             }
         },
+        "/company/{company_id}/orders": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get company orders",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Company",
+                    "Orders"
+                ],
+                "summary": "Get company orders",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "company id",
+                        "name": "company_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/company/{company_id}/review": {
             "post": {
                 "security": [
@@ -719,6 +781,89 @@
                         "required": true
                     }
                 ],
+                "responses": {}
+            }
+        },
+        "/order": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Post order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Post order",
+                "parameters": [
+                    {
+                        "description": "Create order dto",
+                        "name": "order",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.CreateOrderDto"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/order/{order_id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Get order",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "order id",
+                        "name": "order_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/orders": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get orders",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Get orders",
                 "responses": {}
             }
         },
@@ -1084,6 +1229,20 @@
                 }
             }
         },
+        "dtos.CreateOrderDto": {
+            "type": "object",
+            "properties": {
+                "company_id": {
+                    "type": "integer"
+                },
+                "service_id": {
+                    "type": "integer"
+                },
+                "will_be_finished_at": {
+                    "type": "string"
+                }
+            }
+        },
         "dtos.CreateParticipantDto": {
             "type": "object",
             "required": [
@@ -1230,6 +1389,9 @@
                     "items": {
                         "type": "integer"
                     }
+                },
+                "balance": {
+                    "type": "number"
                 },
                 "first_name": {
                     "type": "string"
